# ComfyUI_EchoMimic

./: .gitignore  EchoMimic_node.py  README.md  __init__.py  echo.json  origin_infer.py  pyproject.toml  requirements.txt  utils.py
Wan2.1-Fun-V1.1-1.3B-InP/: config.json  configuration.json
Wan2.1-Fun-V1.1-1.3B-InP/xlm-roberta-large/: tokenizer_config.json
echomimic_v2/: requirements.txt
echomimic_v2/EMTD_dataset/: echomimicv2_benchmark_url+start_timecode+end_timecode.txt  preprocess.py  slice.sh
echomimic_v3/: .gitignore  README.md  envs.py  infer.py  infer_flash_pro.py  lora_adapter.py  requirements.txt
echomimic_v3/config/: config.yaml
echomimic_v3/src/: cache_utils.py  face_detect.py  flow_match_lcm.py  fm_solvers.py  pipeline_wan_fun_inpaint_audio.py  pipeline_wan_fun_inpaint_audio_2512.py  utils.py  wan_image_encoder.py  wan_text_encoder.py  wan_transformer3d_audio.py  wan_transformer3d_audio_2512.py  wan_vae.py  wan_xlm_roberta.py  wav2vec2.py
example/: audio.json  base.json  motion.json  motion_sync_from_video.json  motion_sync_using_audio_from_video.json  new.json  normal.json  pose.json  pose_form_pkl.json  using motion pose.json  workflow.json  workflow1204.json
example_workflows/: echo_Workflow.json  echo_v1_audio.json  echo_v2.json  echo_v2_videodriver.json  echomimic_Workflow.json  echov3_Workflow.json  echov3_falsh_Workflow.json
hallo/: video_sr.py
hallo/animate/: face_animate.py  face_animate_static.py
hallo/basicsr/: __init__.py  train.py  version.py
hallo/datasets/: audio_processor.py  image_processor.py
hallo/models/: attention.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d.py
hallo/utils/: util.py
src/: detector.py  pose.py  pose_classes_and_palettes.py
src/models/: face_locator.py  mutual_self_attention.py  transformer_2d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d_echo.py
src/pipelines/: pipeline_echo_mimic.py  pipeline_echo_mimic_acc.py  (+2 more)
(+1575 files in other folders)
